--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/nodemailer": "^6.4.15",
+    "@types/ws": "^8.5.10",
     "prisma": "5.16.2"
   },
   "peerDependencies": {
@@ -17,6 +18,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@neondatabase/serverless": "^0.9.4",
+    "@prisma/adapter-neon": "^5.16.2",
     "@prisma/client": "5.16.2",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
@@ -24,6 +27,7 @@
     "fastify-type-provider-zod": "^2.0.0",
     "nodemailer": "^6.9.14",
     "winston": "^3.13.0",
+    "ws": "^8.18.0",
     "zod": "^3.23.8"
   }
 }
