feat: render deploy

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun --watch src/server.ts",
+    "start": "bun src/server.ts",
     "db:studio": "bunx prisma studio",
     "db:migrate": "bunx prisma migrate dev"
   },
