--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="file:./dev.db"
-FRONT_BASE_URL="http://localhost:3001"
+DATABASE_URL="postgresql://user:pass@host/db"
+FRONT_BASE_URL="http://localhost:5173"
 PORT="3000"
 BASE_URL="http://localhost"
